--- a/sample.ipynb
+++ b/sample.ipynb
@@ -204,6 +204,26 @@
    "source": [
     "generate_sample(encoder, decoder, dataset, \"my shoes are red\", DEV)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tengo un dolor de mi espalda'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_sample(encoder, decoder, dataset, \"i have an ache in my back\", DEV)"
+   ]
   }
  ],
  "metadata": {
